<resources>
    <string name="app_name">gpshelp2</string>
    <string name="car_icon">scoraya</string>
    <string name="profile_text">Профиль</string>
    <string name="gps_text">GPS</string>
    <string name="more_text">Подробнее</string>
    <string name="documents_text">Документы</string>
    <string name="logo_of_app_1">GPS</string>
    <string name="logo_of_app_2">HELP</string>
    <string name="familiya_user_profile">Фамилия:</string>
    <string name="name_user_profile">Имя:</string>
    <string name="otchestvo_user_profile">Отчество:</string>
    <string name="title_activity_helpdriver">HelpdriverActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>