<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePacient">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="92dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/logo_of_app_1"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="92dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/logo_of_app_2"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@color/asideBgcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/car_icon"
            android:layout_width="56dp"
            android:layout_height="65dp"
            android:contentDescription="@string/car_icon"
            android:onClick="GoBack"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_ambulance_svgrepo_com"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button_gps2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="7dp"
            android:text="GPS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_more"
            app:layout_constraintStart_toEndOf="@+id/car_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_more2"
            android:layout_width="131dp"
            android:layout_height="49dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="10dp"
            android:onClick="startNewActivity"
            android:text="Подробнее"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="390dp"
            android:layout_height="567dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/profileBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/design_default_color_primary_dark"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="396dp"
                    android:layout_height="123dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_free_icon_user_profile_2734847" />

                <TextView
                    android:id="@+id/profileimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/profile_text"
                    android:textColor="@color/white"
                    android:textSize="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/familiya_user_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/familiya_user_profile"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/name_user_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/name_user_profile"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/otchestvo_user_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/otchestvo_user_profile"
                        android:textColor="@color/white"
                        android:textSize="20dp" />


                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>